--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h1>RocketTap</h1>
     <div id="coin-count">0</div>
     <div id="game">
-        <img id="rocket" src="img/image-removebg-preview.png" alt="Rocket">
+        <img id="rocket" src="image-removebg-preview.png" alt="Rocket">
         <div id="content">
             <div id="upgrades-content">
                 <h2>Upgrades</h2>
