--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             text-align: center;
             padding-top: 20px;
             margin: 0;
+            -webkit-tap-highlight-color: transparent; /* Отключить мигание при нажатии на Android */
         }
         h1 {
             margin-bottom: 20px;
@@ -37,6 +38,7 @@
             height: 250px;
             cursor: pointer;
             margin-top: 150px;
+            user-select: none; /* Отключить выделение изображения */
         }
         #content {
             display: none;
