--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
             width: 150px; /* Уменьшение размера изображения */
             height: 150px;
             cursor: pointer;
-            margin-top: 850px; /* Установите значение 910px - 60px для кнопок и изображения */
             user-select: none; /* Отключить выделение изображения */
+            position: relative;
+            top: 300px; /* Размещение ракеты на 10px выше кнопок */
         }
         #content {
             display: none;
             margin-top: 20px;
         }
         .button-container {
-            margin-top: 50px;
+            margin-top: 310px; /* Размещение кнопок на 310px ниже заголовка */
             display: flex;
             justify-content: center;
             width: 100%;
             max-width: 360px;
-            margin-top: 910px;
         }
         .button-container button {
             margin: 5px;
@@ -218,3 +218,4 @@
     </script>
 </body>
 </html>
+
